--- a/app/src/main/res/layout/dilog_bulk_update.xml
+++ b/app/src/main/res/layout/dilog_bulk_update.xml
@@ -915,7 +915,7 @@
                         android:hint="Select Rate Plan"
                         android:textColorHint="@drawable/hint_selector"
                         android:textColor="@color/secondary"
-                        android:text="12 MAR 2023"
+                        android:text="--/--/----"
                         android:clickable="true"
                         android:editable="false"
                         android:focusable="false"/>
@@ -943,7 +943,7 @@
                         android:hint="Select Rate Plan"
                         android:textColorHint="@drawable/hint_selector"
                         android:textColor="@color/secondary"
-                        android:text="12 MAR 2023"
+                        android:text="--/--/----"
                         android:clickable="true"
                         android:editable="false"
                         android:focusable="false"/>
