--- a/app/src/main/res/layout/item_rooms_details.xml
+++ b/app/src/main/res/layout/item_rooms_details.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:strokeColor="#E6ECF5"
-    android:layout_marginBottom="30dp"
+    app:strokeWidth="0dp"
+    android:layout_marginBottom="10dp"
     android:background="@color/primaryBackground"
     android:backgroundTint="@color/primaryBackground"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -19,11 +20,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:weightSum="3"
+            android:weightSum="4"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginHorizontal="20dp"
+
             >
 
             <com.google.android.material.textfield.TextInputLayout
@@ -33,8 +34,9 @@
                 app:placeholderText="Premium"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="10dp"
+                app:boxStrokeColor="@color/dark_grey"
                 app:endIconDrawable="@drawable/svg_arrow_down"
                 android:layout_weight="1"
                 android:hint="Room Type">
@@ -45,6 +47,7 @@
                     android:fontFamily="@font/roboto"
                     android:editable="true"
                     android:focusable="true"
+                    android:text="Premium"
                     android:clickable="true"
                     android:inputType="none"
                     android:textColor="@color/secondary"
@@ -59,9 +62,10 @@
                 android:layout_height="50dp"
                 app:placeholderText="Premium"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="5dp"
+                app:boxStrokeColor="@color/dark_grey"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="15dp"
                 app:endIconDrawable="@drawable/svg_arrow_down"
                 android:layout_weight="1"
                 android:hint="Rate Plan">
@@ -72,6 +76,7 @@
                     android:fontFamily="@font/roboto"
                     android:editable="true"
                     android:focusable="true"
+                    android:text="MAP"
                     android:clickable="true"
                     android:inputType="none"
                     android:textColor="@color/secondary"
@@ -82,8 +87,8 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="17dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="13dp"
                 android:layout_weight="1"
                 android:layout_height="60dp">
 
@@ -92,12 +97,14 @@
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/roomsCard"
                     android:layout_width="0dp"
-                    android:layout_height="48dp"
+                    android:layout_height="44dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:strokeWidth="1dp"
+                    app:strokeWidth="0.5dp"
+                    app:cardCornerRadius="10dp"
+                    app:strokeColor="@color/dark_grey"
                     app:cardBackgroundColor="@color/white"
                     >
 
@@ -160,7 +167,7 @@
                     android:paddingHorizontal="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Base Adults"
+                    android:text="Adults"
                     android:textAlignment="center"
                     android:layout_marginTop="-5dp"
                     android:textSize="@dimen/H6"
@@ -170,17 +177,99 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="0dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="13dp"
+                android:layout_weight="1"
+                android:layout_height="60dp">
+
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/roomschildCard"
+                    android:layout_width="0dp"
+                    android:layout_height="44dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:strokeWidth="0.5dp"
+                    app:cardCornerRadius="10dp"
+                    app:strokeColor="@color/dark_grey"
+                    app:cardBackgroundColor="@color/white"
+                    >
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal"
+                        android:gravity="center"
+                        android:layout_marginVertical="5dp"
+                        app:layout_constraintEnd_toEndOf="@id/registrationNumberLayout"
+                        app:layout_constraintBottom_toBottomOf="@id/rate"
+                        app:layout_constraintTop_toTopOf="@id/rate">
+
+
+                        <ImageView
+                            android:id="@+id/removeChilds"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/svg_remove"
+                            android:layout_marginStart="15dp"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"/>
+
+
+
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="1"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:textAlignment="center"
+                            android:textSize="16sp"
+                            app:layout_constraintStart_toEndOf="@+id/removeChilds"
+                            app:layout_constraintEnd_toStartOf="@+id/addremoveChilds"
+                            android:textColor="@color/black"
+                            android:fontFamily="@font/roboto"/>
+
+
+                        <ImageView
+                            android:id="@+id/addremoveChilds"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/svg_add"
+                            android:layout_marginEnd="15dp"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"/>
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                </com.google.android.material.card.MaterialCardView>
+
+                <TextView
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:paddingHorizontal="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Childs"
+                    android:textAlignment="center"
+                    android:layout_marginTop="-5dp"
+                    android:textSize="@dimen/H6"
+                    android:background="@color/primaryBackground"
+                    android:textColor="@color/subtitle"
+                    android:fontFamily="@font/roboto"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
         </LinearLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/nestedroomDetails_recycler"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/linear_1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginHorizontal="20dp"
-            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
